CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/Direccion__c.object-meta.xml
<CustomObject>
    <label>Dirección</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>identificador de Dirección</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Direcciones</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>