CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Calle_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Calle_Nectia__c</fullName>
    <label>Calle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>