CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Ciudad_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Nectia__c</fullName>
    <label>Ciudad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>