CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Comuna_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Comuna_Nectia__c</fullName>
    <label>Comuna</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Comuna_Nectia</valueSetName>
    </valueSet>
</CustomField>