CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Correo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Correo_Nectia__c</fullName>
    <label>Correo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>