CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Departamento_Casa_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Casa_Nectia__c</fullName>
    <label>Departamento/Casa</label>
    <length>255</length>
    <type>Text</type>
</CustomField>