CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Numero_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Numero_Nectia__c</fullName>
    <label>Numero</label>
    <length>255</length>
    <type>Text</type>
</CustomField>