CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Pais_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Pais_Nectia__c</fullName>
    <label>País</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pais_Nectia</valueSetName>
    </valueSet>
</CustomField>