CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Region_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Region_Nectia__c</fullName>
    <label>Región</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TARAPACÁ</fullName>
            </value>
            <value>
                <fullName>ANTOFAGASTA</fullName>
            </value>
            <value>
                <fullName>ATACAMA</fullName>
            </value>
            <value>
                <fullName>COQUIMBO</fullName>
            </value>
            <value>
                <fullName>VALPARAÍSO</fullName>
            </value>
            <value>
                <fullName>LIB. GRAL. BERNARDO O&apos;HIGGINS</fullName>
            </value>
            <value>
                <fullName>MAULE</fullName>
            </value>
            <value>
                <fullName>BIOBÍO</fullName>
            </value>
            <value>
                <fullName>LA ARAUCANÍA</fullName>
            </value>
            <value>
                <fullName>LOS LAGOS</fullName>
            </value>
            <value>
                <fullName>AISÉN DEL GRAL. C. IBÁÑEZ DEL CAMPO</fullName>
            </value>
            <value>
                <fullName>MAGALLANES Y ANTÁRTICA CHILENA</fullName>
            </value>
            <value>
                <fullName>METROPOLITANA</fullName>
            </value>
            <value>
                <fullName>LOS RÍOS</fullName>
            </value>
            <value>
                <fullName>ARICA Y PARINACOTA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>