CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Telefono_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Telefono_Nectia__c</fullName>
    <label>Telefono</label>
    <type>Phone</type>
</CustomField>