CNSDEVCOLECT/force-app/main/default/objects/Direccion__c/fields/Tipo_Nectia__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Nectia__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Envío</fullName>
            </value>
            <value>
                <fullName>Facturación</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>